fix(noora/tooltip): fix tooltip z-index (#1582)
Tooltips should overlay any other content, thus having the highest
possible z-index.

--- a/assets/_noora/css/tooltip.css
+++ b/assets/_noora/css/tooltip.css
@@ -8,6 +8,7 @@
     max-width: 250px;
     position: absolute;
     width: max-content;
+    z-index: var(--noora-z-index-12);
 
     & [data-part="icon"] {
       display: inline-flex;
